<?xml version="1.0"?>
<package format="2">
  <name>rossumo_qtviewer</name>
  <version>0.0.0</version>
  <description>
    "rossumo_qtviewer" is a Qt interface
    for the "roswifibot" package.
  </description>
  <maintainer email="arnaud.a.ramey@gmail.com">Arnaud RAMEY</maintainer>
  <license>LGPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>usb_cam</depend>
  <depend>libqt4-dev</depend>
  <export>
  </export>
</package>
